--- a/package.json
+++ b/package.json
@@ -7,24 +7,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.0",
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
+    "@prisma/client": "^5",
     "bcrypt": "^5.1.0",
-    "next": "^13.4.2",
+    "next": "^14",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/node": "^20",
+    "@types/react": "^18.0.25",
     "autoprefixer": "^10.4.4",
-    "eslint": "8.11.0",
-    "eslint-config-next": "^13.0.5",
+    "eslint": "^8.11.0",
+    "eslint-config-next": "^14",
     "postcss": "^8.4.12",
-    "prisma": "^4.14.0",
+    "prettier": "^3.1.1",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.2"
+    "typescript": "^5"
   }
 }
